first commit and final

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources>
-    <string name="app_name">Solar System</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">SolarSystem</string>
+
+
+    <array name="img_planets">
+        <item>@drawable/mars</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/neptune</item>
+        <item>@drawable/saturn</item>
+        <item>@drawable/uranus</item>
+        <item>@drawable/venus</item>
+    </array>
+    <string-array name="planets_array">
+        <item>Mars</item>
+        <item>Mercury</item>
+        <item>Neptune</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Venus</item>
+
+    </string-array>
 </resources>
